first working tool equipment. not selective but working.

--- a/Languages/English/Keyed/Designators.xml
+++ b/Languages/English/Keyed/Designators.xml
@@ -7,17 +7,17 @@
   
   <!-- Failure messages -->
   <CannotMount>Must designate colonist can be mounted.</CannotMount>
-    <NotPawn>It is not pawn.</NotPawn>
-    <NotColonyFaction>It is not in your faction.</NotColonyFaction>
-    <NotHumanlikeOrMechanoid>It is not for humanlike or mechanoid.</NotHumanlikeOrMechanoid>
+    <NotPawn>Is not a pawn.</NotPawn>
+    <NotColonyFaction>Is not in your faction.</NotColonyFaction>
+    <NotHumanlikeOrMechanoid>Is not for humanlike or mechanoid.</NotHumanlikeOrMechanoid>
     <NotTrainedAnimal>The animal is not trained for 'Obedience'.</NotTrainedAnimal>
-    <TooSmallAnimal>The animal is too small to mount.</TooSmallAnimal>
-    <NoWorkForMakeMount>No worker make animal mount.</NoWorkForMakeMount>
+    <TooSmallAnimal>The animal is too small to be mounted.</TooSmallAnimal>
+    <NoWorkForMakeMount>No worker to mount animal.</NoWorkForMakeMount>
   <CannotBoard>Must designate humanlike or colony mechanoid.</CannotBoard>
-  <NoNeedTreatment>Must designate pawn needed treatment.</NoNeedTreatment>
-  <BackpackIsFull>BackPack has been Full.</BackpackIsFull>
-  <InvalidPutInTarget>Must designate item can be hauled</InvalidPutInTarget>
-  <NoDoctor>Colonist is not doctor</NoDoctor>
-  <CannotEatAnymore>Colonist don't want to eat anymore</CannotEatAnymore>
+  <NoNeedTreatment>Must designate a pawn who needs treatment.</NoNeedTreatment>
+  <BackpackIsFull>BackPack is Full.</BackpackIsFull>
+  <InvalidPutInTarget>Must designate an item can be hauled</InvalidPutInTarget>
+  <NoDoctor>Colonist is not a doctor</NoDoctor>
+  <CannotEatAnymore>Colonist is not hungry</CannotEatAnymore>
 
 </LanguageData>
