--- a/Languages/English/Keyed/FloatMenu.xml
+++ b/Languages/English/Keyed/FloatMenu.xml
@@ -11,6 +11,6 @@
   
   <!-- Saddle -->
   <Ride>Ride {0}</Ride>
-  <AlreadyRide>Already ride.</AlreadyRide>
+  <AlreadyRide>Already riding.</AlreadyRide>
   
 </LanguageData>
