--- a/Languages/English/Keyed/Designators.xml
+++ b/Languages/English/Keyed/Designators.xml
@@ -23,5 +23,5 @@
   <ParkingLotZone>Parking lot</ParkingLotZone>
   <TFH_DescriptionParkingLot>A place for pawns to store vehicles. Pre-requisite for hauling with vehicles.</TFH_DescriptionParkingLot>
   <MaximumLots>Maximum parking lots: {0}</MaximumLots>
-  <OccupiedLots>Occupied parking lots: {0}</OccupiedLots>
+  <OccupiedLots>Occupied parking spaces: {0}</OccupiedLots>
 </LanguageData>
