--- a/Languages/English/Keyed/Misc_Gameplay.xml
+++ b/Languages/English/Keyed/Misc_Gameplay.xml
@@ -12,8 +12,12 @@
   
   <!-- Cart -->
   <InStorage>In Storage</InStorage>
-  <VehicleTankLeakingLabel>A gas tank is leaking fuel</VehicleTankLeakingLabel>
-  <VehicleTankLeakingExplanation>The gas tank of this vehicle has been damaged and is leaking fuel. Repair it to avoid more gas spilled on the ground.</VehicleTankLeakingExplanation>
+  <Driver>Driver: </Driver>
+  <NoDriver>No driver.</NoDriver>
+  <TankIsLeaking>Leaks fuel.</TankIsLeaking> 
+  <VehicleTankLeakingLabel>A fuel tank is leaking</VehicleTankLeakingLabel>
+  <VehicleTankLeakingExplanation>The fuel tank of this vehicle has been damaged and is leaking. Repair it to avoid more fuel spilled into the environment.</VehicleTankLeakingExplanation>
+
   <!-- Saddle -->
   <Rider>Rider</Rider>
   
